deployment.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: hello

# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        imagePullPolicy: Never
        image: hello:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
